5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/3119/executions/1764_1189.log
== TEST (2019-05-24 20:50:29) 
-- CODE:
p = input("Digite : ")

a = replace(p)

print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    a = replace(p)
NameError: name 'replace' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 20:51:15) 
-- CODE:
p = input("Digite : ")



print(replace(p))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(replace(p))
NameError: name 'replace' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 20:56:55) 
-- CODE:
s = input("Digite uma string: ")
# String vazia
inv = ""
# Contador comeca no fim da string
i = -1
while i >= -len(s):
	inv = inv + s[i]
	i = i - 1
print(inv)
-- OUTPUT:
ACARARAJADADAJARARACA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 20:58:12) 
-- CODE:
s = input("Digite uma string: ")
# String vazia
inv = ""
# Contador comeca no fim da string
i = -1
while i >= -len(s):
	inv = inv + s[i]
	i = i - 1
if(inv[0:] == s[0:]):
	print(1)
print(inv)
-- OUTPUT:
1
ACARARAJADADAJARARACA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 20:58:50) 
-- CODE:
s = input("Digite uma string: ")
# String vazia
inv = ""
# Contador comeca no fim da string
i = -1
while i >= -len(s):
	inv = inv + s[i]
	i = i - 1
inv
if(inv[0:] == s[0:]):
	print(1)
print(inv)
-- OUTPUT:
1
ACARARAJADADAJARARACA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 20:59:20) 
-- CODE:
s = input("Digite uma string: ")
# String vazia
inv = ""
# Contador comeca no fim da string
i = -1
while i >= -len(s):
	inv = inv + s[i]
	i = i - 1
inv
if(inv[0:] == s[0:]):
	print(1)
else:
	print(0)
print(inv)
-- OUTPUT:
1
ACARARAJADADAJARARACA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 21:02:35) 
-- CODE:
s = input("Digite uma string: ")
# String vazia
new = s.replace(" ","")
inv = ""
# Contador comeca no fim da string
i = -1
while i >= -len(s):
	inv = inv + s[i]
	i = i - 1
inv
if(inv[0:] == s[0:]):
	print(1)
else:
	print(0)
print(inv)
-- OUTPUT:
1
ACARARAJADADAJARARACA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 21:02:47) 
-- CODE:
s = input("Digite uma string: ")
# String vazia
new = s.replace(" ","")

print(new)
-- OUTPUT:
ACARARAJADADAJARARACA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 21:03:30) 
-- CODE:
s = input("Digite uma string: ")
# String vazia
new = s.replace(" ","")

inv = ""
# Contador comeca no fim da string
i = -1
while i >= -len(new):
	inv = inv + s[i]
	i = i - 1
inv
if(inv[0:] == s[0:]):
	print(1)
else:
	print(0)
print(inv)
-- OUTPUT:
1
ACARARAJADADAJARARACA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 21:03:50) 
-- CODE:
s = input("Digite uma string: ")
# String vazia
new = s.replace(" ","")

inv = ""
# Contador comeca no fim da string
i = -1
while i >= -len(new):
	inv = inv + s[i]
	i = i - 1
inv
if(inv[0:] == s[0:]):
	print(1)
else:
	print(0)
print(inv)
-- OUTPUT:
1
ACARARAJADADAJARARACA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 21:03:53) 
-- CODE:
s = input("Digite uma string: ")
# String vazia
new = s.replace(" ","")

inv = ""
# Contador comeca no fim da string
i = -1
while i >= -len(new):
	inv = inv + s[i]
	i = i - 1
inv
if(inv[0:] == s[0:]):
	print(1)
else:
	print(0)
print(inv)
-- OUTPUT:
1
ACARARAJADADAJARARACA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 21:04:05) 
-- CODE:
s = input("Digite uma string: ")
# String vazia
new = s.replace(" ","")

inv = ""
# Contador comeca no fim da string
i = -1
while i >= -len(new):
	inv = inv + s[i]
	i = i - 1
inv
if(inv[0:] == s[0:]):
	print(1)
else:
	print(0)
print(inv)
-- OUTPUT:
1
ACARARAJADADAJARARACA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 21:06:30) 
-- CODE:
s = input("Digite uma string: ")
# String vazia
new = s.replace(" ","")

inv = ""
# Contador comeca no fim da string
i = -1
while i >= -len(new):
	inv = inv + new[i]
	i = i - 1
b = inv
if(inv[0:] == s[0:]):
	print(1)
else:
	print(0)
print(inv)
-- OUTPUT:
1
ACARARAJADADAJARARACA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 21:06:31) 
-- CODE:
s = input("Digite uma string: ")
# String vazia
new = s.replace(" ","")

inv = ""
# Contador comeca no fim da string
i = -1
while i >= -len(new):
	inv = inv + new[i]
	i = i - 1
b = inv
if(inv[0:] == s[0:]):
	print(1)
else:
	print(0)
print(inv)
-- OUTPUT:
1
ACARARAJADADAJARARACA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 21:07:03) 
-- CODE:
s = input("Digite uma string: ")
# String vazia
new = s.replace(" ","")

inv = ""
# Contador comeca no fim da string
i = -1
while i >= -len(new):
	inv = inv + new[i]
	i = i - 1
b = inv
if(inv[0:] == new[0:]):
	print(1)
else:
	print(0)
print(inv)
-- OUTPUT:
1
ACARARAJADADAJARARACA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 21:07:18) 
-- CODE:
s = input("Digite uma string: ")
# String vazia
new = s.replace(" ","")

inv = ""
# Contador comeca no fim da string
i = -1
while i >= -len(new):
	inv = inv + new[i]
	i = i - 1
inv
if(inv[0:] == new[0:]):
	print(1)
else:
	print(0)
print(inv)
-- OUTPUT:
1
ACARARAJADADAJARARACA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 21:08:18) 
-- CODE:
s = input("Digite uma string: ")
# String vazia
new = s.replace(" ","")

inv = ""
# Contador comeca no fim da string
i = -1
while i >= -len(new):
	inv = inv + new[i]
	i = i - 1
inv
print(inv.upper())

if(inv[0:] == new[0:]):
	print(1)
else:
	print(0)

-- OUTPUT:
ACARARAJADADAJARARACA
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 21:08:44) 
-- CODE:
s = input("Digite uma string: ")
# String vazia
new = s.replace(" ","")

inv = ""
# Contador comeca no fim da string
i = -1
while i >= -len(new):
	inv = inv + new[i]
	i = i - 1
inv
print(inv.upper())

if(inv[0:] == new[0:]):
	print(1)
else:
	print(0)

-- OUTPUT:
ACARARAJADADAJARARACA
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 21:08:54) 
-- CODE:
s = input("Digite uma string: ")
# String vazia
new = s.replace(" ","")

inv = ""
# Contador comeca no fim da string
i = -1
while i >= -len(new):
	inv = inv + new[i]
	i = i - 1
inv
print(inv.upper())

if(inv[0:] == new[0:]):
	print(1)
else:
	print(0)

-- OUTPUT:
ACARARAJADADAJARARACA
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-24 21:09:06) 
-- CODE:
s = input("Digite uma string: ")
# String vazia
new = s.replace(" ","")

inv = ""
# Contador comeca no fim da string
i = -1
while i >= -len(new):
	inv = inv + new[i]
	i = i - 1
inv
print(inv.upper())

if(inv[0:] == new[0:]):
	print(1)
else:
	print(0)

-- EXECUTION TIME:
0.176813
-- TEST CASE 1:
---- input:
ACARARAJADADAJARARACA
---- correct output:
ACARARAJADADAJARARACA
1
---- user output:
ACARARAJADADAJARARACA
1
-- TEST CASE 2:
---- input:
CACHORRO
---- correct output:
CACHORRO
0
---- user output:
ORROHCAC
0
-- TEST CASE 3:
---- input:
amalanadanalama
---- correct output:
AMALANADANALAMA
1
---- user output:
AMALANADANALAMA
1
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 21:10:31) 
-- CODE:
s = input("Digite uma string: ")
# String vazia
new = s.replace(" ","")

inv = ""
# Contador comeca no fim da string
i = -1
while i >= -len(new):
	inv = inv + new[i]
	i = i - 1
	if(inv[0:] == new[0:]):
		a = 1
	else:
		a = 0

-- OUTPUT:
ACARARAJADADAJARARACA
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 21:11:20) 
-- CODE:
s = input("Digite uma string: ")
# String vazia
new = s.replace(" ","")

inv = ""
# Contador comeca no fim da string
i = -1
while i >= -len(new):
	inv = inv + new[i]
	i = i - 1
	if(inv[0:] == new[0:]):
		a = 1
	else:
		a = 0

print(inv.upper())
print(a)
-- OUTPUT:
ACARARAJADADAJARARACA
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-24 21:11:38) 
-- CODE:
s = input("Digite uma string: ")
# String vazia
new = s.replace(" ","")

inv = ""
# Contador comeca no fim da string
i = -1
while i >= -len(new):
	inv = inv + new[i]
	i = i - 1
	if(inv[0:] == new[0:]):
		a = 1
	else:
		a = 0

print(inv.upper())
print(a)
-- EXECUTION TIME:
0.146999
-- TEST CASE 1:
---- input:
ACARARAJADADAJARARACA
---- correct output:
ACARARAJADADAJARARACA
1
---- user output:
ACARARAJADADAJARARACA
1
-- TEST CASE 2:
---- input:
CACHORRO
---- correct output:
CACHORRO
0
---- user output:
ORROHCAC
0
-- TEST CASE 3:
---- input:
amalanadanalama
---- correct output:
AMALANADANALAMA
1
---- user output:
AMALANADANALAMA
1
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 21:12:01) 
-- CODE:
s = input("Digite uma string: ")
# String vazia
new = s.replace(" ","")

inv = ""
# Contador comeca no fim da string
i = -1
while i >= -len(new):
	inv = inv + new[i]
	i = i - 1
	if(inv[0:] == new[0:]):
		a = 1
	else:
		a = 0

print(inv.upper())
print(a)
-- OUTPUT:
ACARARAJADADAJARARACA
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 21:13:14) 
-- CODE:
s = input("Digite uma string: ")
# String vazia
new = s.replace(" ","")

inv = ""
# Contador comeca no fim da string
i = -1
while i >= -len(new):
	inv = inv + new[i]
	i = i - 1
	if(inv[0:] == new[-1:]):
		a = 1
	else:
		a = 0

print(inv.upper())
print(a)
-- OUTPUT:
ACARARAJADADAJARARACA
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 21:14:02) 
-- CODE:
s = input("Digite uma string: ")
# String vazia
new = s.replace(" ","")

inv = ""
# Contador comeca no fim da string
i = -1
while i >= -len(new):
	inv = inv + new[i]
	i = i - 1
	if(inv[0:] == new[:-1]):
		a = 1
	else:
		a = 0

print(inv.upper())
print(a)
-- OUTPUT:
ACARARAJADADAJARARACA
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-24 21:16:04) 
-- CODE:
s = input("Digite uma string: ")
# String vazia
new = s.replace(" ","")

inv = ""
# Contador comeca no fim da string
i = -1
while i >= -len(new):
	inv = inv + new[i]
	i = i - 1
	if(inv[0:] == new[0:]):
		a = 1
	else:
		a = 0

print(inv.upper())
print(a)
-- EXECUTION TIME:
0.179379
-- TEST CASE 1:
---- input:
ACARARAJADADAJARARACA
---- correct output:
ACARARAJADADAJARARACA
1
---- user output:
ACARARAJADADAJARARACA
1
-- TEST CASE 2:
---- input:
CACHORRO
---- correct output:
CACHORRO
0
---- user output:
ORROHCAC
0
-- TEST CASE 3:
---- input:
amalanadanalama
---- correct output:
AMALANADANALAMA
1
---- user output:
AMALANADANALAMA
1
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 21:16:19) 
-- CODE:
s = input("Digite uma string: ")
# String vazia
new = s.replace(" ","")

inv = ""
# Contador comeca no fim da string
i = -1
while i >= -len(new):
	inv = inv + new[i]
	i = i - 1
	if(inv[0:] == new[-i:]):
		a = 1
	else:
		a = 0

print(inv.upper())
print(a)
-- OUTPUT:
ACARARAJADADAJARARACA
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 21:16:40) 
-- CODE:
s = input("Digite uma string: ")
# String vazia
new = s.replace(" ","")

inv = ""
# Contador comeca no fim da string
i = -1
while i >= -len(new):
	inv = inv + new[i]
	i = i - 1
	if(inv[0:] == new[-i:-1]):
		a = 1
	else:
		a = 0

print(inv.upper())
print(a)
-- OUTPUT:
ACARARAJADADAJARARACA
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 21:18:17) 
-- CODE:
s = input("Digite uma string: ")
# String vazia
new = s.replace(" ","")

inv = ""
# Contador comeca no fim da string
i = -1
while i >= -len(new):
	inv = inv + new[i]
	i = i - 1
	if(inv[0:] == new[-i:]):
		a = 1
	else:
		a = 0

print(inv.upper())
print(a)
-- OUTPUT:
ACARARAJADADAJARARACA
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-24 21:18:35) 
-- CODE:
s = input("Digite uma string: ")
# String vazia
new = s.replace(" ","")

inv = ""
# Contador comeca no fim da string
i = -1
while i >= -len(new):
	inv = inv + new[i]
	i = i - 1
	if(inv[0:] == new[0:]):
		a = 1
	else:
		a = 0

print(inv.upper())
print(a)
-- EXECUTION TIME:
0.140157
-- TEST CASE 1:
---- input:
ACARARAJADADAJARARACA
---- correct output:
ACARARAJADADAJARARACA
1
---- user output:
ACARARAJADADAJARARACA
1
-- TEST CASE 2:
---- input:
CACHORRO
---- correct output:
CACHORRO
0
---- user output:
ORROHCAC
0
-- TEST CASE 3:
---- input:
amalanadanalama
---- correct output:
AMALANADANALAMA
1
---- user output:
AMALANADANALAMA
1
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 21:19:38) 
-- CODE:
s = input("Digite uma string: ")
# String vazia


inv = ""
# Contador comeca no fim da string
i = -1
while i >= -len(new):
	inv = inv + s[i]
	i = i - 1
	if(inv[0:] == s[0:]):
		a = 1
	else:
		a = 0
inv
new = inv.replace(" ","")
print(new.upper())
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    while i >= -len(new):
NameError: name 'new' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 21:20:07) 
-- CODE:
s = input("Digite uma string: ")
# String vazia


inv = ""
# Contador comeca no fim da string
i = -1
while i >= -len(s):
	inv = inv + s[i]
	i = i - 1
	if(inv[0:] == s[0:]):
		a = 1
	else:
		a = 0
inv
new = inv.replace(" ","")
print(new.upper())
print(a)
-- OUTPUT:
ACARARAJADADAJARARACA
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 21:20:51) 
-- CODE:
s = input("Digite uma string: ")
# String vazia


inv = ""
# Contador comeca no fim da string
i = -1
while i >= -len(s):
	inv = inv + s[i]
	i = i - 1
	if(inv[0:] == s[0:]):
		a = 1
	else:
		a = 0
inv
new = inv.replace(" ","")
print(inv)
print(a)
-- OUTPUT:
ACARARAJADADAJARARACA
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 21:23:23) 
-- CODE:
s = input("Digite uma string: ")
# String vazia


inv = ""
# Contador comeca no fim da string
i = -1
while i >= -len(s):
	inv = inv + s[i]
	i = i - 1

new = inv.replace(" ","")	
nova = s.replace(" ","")	
if(new[0:] == nova[0:]):
	a = 1
else:
	a = 0
inv

print(inv)
print(a)
-- OUTPUT:
ACARARAJADADAJARARACA
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-24 21:23:39) 
-- CODE:
s = input("Digite uma string: ")
# String vazia


inv = ""
# Contador comeca no fim da string
i = -1
while i >= -len(s):
	inv = inv + s[i]
	i = i - 1

new = inv.replace(" ","")	
nova = s.replace(" ","")	
if(new[0:] == nova[0:]):
	a = 1
else:
	a = 0
inv

print(inv)
print(a)
-- EXECUTION TIME:
0.13651
-- TEST CASE 1:
---- input:
ACARARAJADADAJARARACA
---- correct output:
ACARARAJADADAJARARACA
1
---- user output:
ACARARAJADADAJARARACA
1
-- TEST CASE 2:
---- input:
CACHORRO
---- correct output:
CACHORRO
0
---- user output:
ORROHCAC
0
-- TEST CASE 3:
---- input:
amalanadanalama
---- correct output:
AMALANADANALAMA
1
---- user output:
amalanadanalama
1
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 21:23:59) 
-- CODE:
s = input("Digite uma string: ")
# String vazia


inv = ""
# Contador comeca no fim da string
i = -1
while i >= -len(s):
	inv = inv + s[i]
	i = i - 1

new = inv.replace(" ","")	
nova = s.replace(" ","")	
if(new[0:] == nova[0:]):
	a = 1
else:
	a = 0

print(new.upper())
print(a)
-- OUTPUT:
ACARARAJADADAJARARACA
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-24 21:24:12) 
-- CODE:
s = input("Digite uma string: ")
# String vazia


inv = ""
# Contador comeca no fim da string
i = -1
while i >= -len(s):
	inv = inv + s[i]
	i = i - 1

new = inv.replace(" ","")	
nova = s.replace(" ","")	
if(new[0:] == nova[0:]):
	a = 1
else:
	a = 0

print(new.upper())
print(a)
-- EXECUTION TIME:
0.15302
-- TEST CASE 1:
---- input:
ACARARAJADADAJARARACA
---- correct output:
ACARARAJADADAJARARACA
1
---- user output:
ACARARAJADADAJARARACA
1
-- TEST CASE 2:
---- input:
CACHORRO
---- correct output:
CACHORRO
0
---- user output:
ORROHCAC
0
-- TEST CASE 3:
---- input:
amalanadanalama
---- correct output:
AMALANADANALAMA
1
---- user output:
AMALANADANALAMA
1
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-24 21:24:21) 
-- CODE:
s = input("Digite uma string: ")
# String vazia


inv = ""
# Contador comeca no fim da string
i = -1
while i >= -len(s):
	inv = inv + s[i]
	i = i - 1

new = inv.replace(" ","")	
nova = s.replace(" ","")	
if(new[0:] == nova[0:]):
	a = 1
else:
	a = 0

print(new.upper())
print(a)
-- EXECUTION TIME:
0.162043
-- TEST CASE 1:
---- input:
ACARARAJADADAJARARACA
---- correct output:
ACARARAJADADAJARARACA
1
---- user output:
ACARARAJADADAJARARACA
1
-- TEST CASE 2:
---- input:
CACHORRO
---- correct output:
CACHORRO
0
---- user output:
ORROHCAC
0
-- TEST CASE 3:
---- input:
amalanadanalama
---- correct output:
AMALANADANALAMA
1
---- user output:
AMALANADANALAMA
1
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 21:25:03) 
-- CODE:
s = input("Digite uma string: ")
# String vazia
new = s.replace(" ","")

inv = ""
# Contador comeca no fim da string
i = -1
while i >= -len(new):
	inv = inv + new[i]
	i = i - 1
	if(new[0:] == inv[0:]):
		a = 1
	else:
		a = 0

print(inv.upper())
print(a)
-- OUTPUT:
ACARARAJADADAJARARACA
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-24 21:25:15) 
-- CODE:
s = input("Digite uma string: ")
# String vazia
new = s.replace(" ","")

inv = ""
# Contador comeca no fim da string
i = -1
while i >= -len(new):
	inv = inv + new[i]
	i = i - 1
	if(new[0:] == inv[0:]):
		a = 1
	else:
		a = 0

print(inv.upper())
print(a)
-- EXECUTION TIME:
0.131072
-- TEST CASE 1:
---- input:
ACARARAJADADAJARARACA
---- correct output:
ACARARAJADADAJARARACA
1
---- user output:
ACARARAJADADAJARARACA
1
-- TEST CASE 2:
---- input:
CACHORRO
---- correct output:
CACHORRO
0
---- user output:
ORROHCAC
0
-- TEST CASE 3:
---- input:
amalanadanalama
---- correct output:
AMALANADANALAMA
1
---- user output:
AMALANADANALAMA
1
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 21:25:48) 
-- CODE:
s = input("Digite uma string: ")
# String vazia
new = s.replace(" ","")

inv = ""
# Contador comeca no fim da string
i = -1
while i >= -len(new):
	inv = inv + new[i]
	i = i - 1
	if(new[0:] == inv[-1:]):
		a = 1
	else:
		a = 0

print(inv.upper())
print(a)
-- OUTPUT:
ACARARAJADADAJARARACA
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 21:26:43) 
-- CODE:
s = input("Digite uma string: ")
# String vazia
new = s.replace(" ","")

inv = ""
# Contador comeca no fim da string
i = -1
while i >= -len(new):
	inv = inv + new[i]
	i = i - 1
	if(new[0:] == inv[-1:]):
		a = 1
	else:
		a = 0

print(new.upper())
print(a)
-- OUTPUT:
ACARARAJADADAJARARACA
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-24 21:26:52) 
-- CODE:
s = input("Digite uma string: ")
# String vazia
new = s.replace(" ","")

inv = ""
# Contador comeca no fim da string
i = -1
while i >= -len(new):
	inv = inv + new[i]
	i = i - 1
	if(new[0:] == inv[-1:]):
		a = 1
	else:
		a = 0

print(new.upper())
print(a)
-- EXECUTION TIME:
0.131944
-- TEST CASE 1:
---- input:
ACARARAJADADAJARARACA
---- correct output:
ACARARAJADADAJARARACA
1
---- user output:
ACARARAJADADAJARARACA
0
-- TEST CASE 2:
---- input:
CACHORRO
---- correct output:
CACHORRO
0
---- user output:
CACHORRO
0
-- TEST CASE 3:
---- input:
amalanadanalama
---- correct output:
AMALANADANALAMA
1
---- user output:
AMALANADANALAMA
0
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-24 21:26:59) 
-- CODE:
s = input("Digite uma string: ")
# String vazia
new = s.replace(" ","")

inv = ""
# Contador comeca no fim da string
i = -1
while i >= -len(new):
	inv = inv + new[i]
	i = i - 1
	if(new[0:] == inv[-1:]):
		a = 1
	else:
		a = 0

print(new.upper())
print(a)
-- EXECUTION TIME:
0.14848
-- TEST CASE 1:
---- input:
ACARARAJADADAJARARACA
---- correct output:
ACARARAJADADAJARARACA
1
---- user output:
ACARARAJADADAJARARACA
0
-- TEST CASE 2:
---- input:
CACHORRO
---- correct output:
CACHORRO
0
---- user output:
CACHORRO
0
-- TEST CASE 3:
---- input:
amalanadanalama
---- correct output:
AMALANADANALAMA
1
---- user output:
AMALANADANALAMA
0
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 21:27:08) 
-- CODE:
s = input("Digite uma string: ")
# String vazia
new = s.replace(" ","")

inv = ""
# Contador comeca no fim da string
i = -1
while i >= -len(new):
	inv = inv + new[i]
	i = i - 1
	if(new[0:] == inv[-1:]):
		a = 1
	else:
		a = 0

print(inv.upper())
print(a)
-- OUTPUT:
ACARARAJADADAJARARACA
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-24 21:29:38) 
-- CODE:
s = input("Digite uma string: ")
# String vazia
new = s.replace(" ","")

inv = ""
# Contador comeca no fim da string
i = -1
while i >= -len(new):
	inv = inv + new[i]
	i = i - 1
	if(new[0:] == inv[0:]):
		a = 1
	else:
		a = 0

print(inv.upper())
print(a)
-- EXECUTION TIME:
0.17915
-- TEST CASE 1:
---- input:
ACARARAJADADAJARARACA
---- correct output:
ACARARAJADADAJARARACA
1
---- user output:
ACARARAJADADAJARARACA
1
-- TEST CASE 2:
---- input:
CACHORRO
---- correct output:
CACHORRO
0
---- user output:
ORROHCAC
0
-- TEST CASE 3:
---- input:
amalanadanalama
---- correct output:
AMALANADANALAMA
1
---- user output:
AMALANADANALAMA
1
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 21:30:26) 
-- CODE:
s = input("Digite uma string: ")
# String vazia
new = s.replace(" ","")

inv = ""
# Contador comeca no fim da string
i = -1
while i >= -len(new):
	inv = inv + new[i]
	i = i - 1
	if(new[0:] == inv[0:]):
		a = 1
	else:
		a = 0

print(s.replace(" ","").upper())
print(a)
-- OUTPUT:
ACARARAJADADAJARARACA
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-24 21:30:41) 
-- CODE:
s = input("Digite uma string: ")
# String vazia
new = s.replace(" ","")

inv = ""
# Contador comeca no fim da string
i = -1
while i >= -len(new):
	inv = inv + new[i]
	i = i - 1
	if(new[0:] == inv[0:]):
		a = 1
	else:
		a = 0

print(s.replace(" ","").upper())
print(a)
-- EXECUTION TIME:
0.167456
-- TEST CASE 1:
---- input:
ACARARAJADADAJARARACA
---- correct output:
ACARARAJADADAJARARACA
1
---- user output:
ACARARAJADADAJARARACA
1
-- TEST CASE 2:
---- input:
CACHORRO
---- correct output:
CACHORRO
0
---- user output:
CACHORRO
0
-- TEST CASE 3:
---- input:
amalanadanalama
---- correct output:
AMALANADANALAMA
1
---- user output:
AMALANADANALAMA
1
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
